# visdom-harness

./: .env.example  .gitignore  Cargo.toml  README.md  skills-lock.json
.github/workflows/: ci.yml
harness/: .env.example  Cargo.toml  visdom.toml
harness/migrations/: 0002_projects_entities.sql  0003_reasoning_loop_schema.sql
harness/src/: config.rs  db.rs  entities.rs  http.rs  integrations.rs  lib.rs  main.rs  projects.rs  questions.rs
harness/src/entities/: count.sql  count_by_project.sql  create.sql  get_references.sql  insert_references.sql  list.sql  list_by_project.sql
harness/src/http/: entities.rs  health.rs  projects.rs  (+1 more)
harness/tests/: debug_infer.rs  debug_infer_live.rs  entities_repo.rs  health.rs  integrations.rs  projects_http.rs  questions_http.rs  telemetry.rs
migrations/: 0001_inferences.sql  0001_init.sql  0002_projects_entities.sql
scripts/: install-hooks.sh
scripts/hooks/: pre-push
src/: config.rs  db.rs  entities.rs  error.rs  http.rs  inferences.rs  lib.rs  llm.rs  main.rs  projects.rs  telemetry.rs
src/entities/: create.sql  get.sql  list_by_project.sql
src/http/: debug.rs  entities.rs  health.rs  mod.rs  projects.rs
src/inferences/: get.sql  mod.rs
src/llm/: anthropic.rs
src/projects/: create.sql  exists.sql  insert_stub.sql
tests/: db.rs  debug_infer.rs  debug_infer_live.rs  entities_repo.rs  health.rs  inferences.rs  projects_http.rs  projects_repo.rs
web/: Cargo.toml  Dioxus.toml
web/assets/: style.css
web/src/: api.rs  layout.rs  main.rs  routes.rs
web/src/views/: entities.rs  mod.rs  projects.rs
(+12 files in other folders)
