[package]
name = "visdom-harness"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "visdom-harness"
path = "src/main.rs"

[lib]
name = "visdom_harness"
path = "src/lib.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "migrate", "macros", "chrono", "uuid"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-stdout = "0.27"
tracing-opentelemetry = "0.28"
thiserror = "2"
eyre = "0.6"
color-eyre = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
rig-core = "0.11"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tempfile = "3"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
