[package]
name = "visdom-web"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "visdom-web"
path = "src/main.rs"

[dependencies]
dioxus = { version = "0.7", features = ["web", "router"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde", "js"] }
wasm-bindgen-futures = "0.4"
gloo-net = { version = "0.6", features = ["http"] }
